Added CheckHTTP in flowcontrol with Gateway integration support (#1563)
New Feature: Added CheckHTTP service to perform Aperture Flowcontrol
check on incoming requests to a networked service. Includes support for
Gateway integration with Kong API Gateway and Nginx plugin, as well as
new HTTP request and response messages and enums. Also adds CircleCI job
for publishing an Aperture Lua module and updates to documentation.

![image](https://user-images.githubusercontent.com/34568645/227144557-dcace239-7be1-472a-92da-329c1f93942a.png)
![image](https://user-images.githubusercontent.com/34568645/227144610-0af3beb1-622c-4a16-a4de-cce2f88e16fb.png)

---------
